force-app/main/default/objects/Credit_Profile__c/Credit_Profile__c.object-meta.xml
<CustomObject>
    <label>Credit Profile</label>
    <nameField>
        <displayFormat>CP-{0000}</displayFormat>
        <label>Credit Profile Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>