force-app/main/default/objects/Credit_Profile__c/fields/Aging_of_Outstanding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Aging_of_Outstanding_Amount__c</fullName>
    <label>Aging of Outstanding Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>