force-app/main/default/objects/Credit_Profile__c/fields/Credit_Group__c.field-meta.xml
<CustomField>
    <fullName>Credit_Group__c</fullName>
    <label>Credit Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>