force-app/main/default/objects/Credit_Profile__c/fields/Credit_Segment__c.field-meta.xml
<CustomField>
    <fullName>Credit_Segment__c</fullName>
    <defaultValue>&quot;ZAK1 Credit Segment MDM&quot;</defaultValue>
    <label>Credit Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ZAK1 Credit Segment MDM</fullName>
            </value>
            <value>
                <fullName>ZMSPL2 MDSPL Segment - Diagnostics</fullName>
            </value>
            <value>
                <fullName>ZMSPL1 MDSPL Segment - Chemical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>