force-app/main/default/objects/Credit_Profile__c/fields/Risk_Class__c.field-meta.xml
<CustomField>
    <fullName>Risk_Class__c</fullName>
    <label>Risk Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>