force-app/main/default/objects/Credit_Profile__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Credit_Limit__c</columns>
    <columns>Credit_Segment__c</columns>
    <columns>Outstanding_Amount__c</columns>
    <columns>Aging_of_Outstanding_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>